--- a/public/index.html
+++ b/public/index.html
@@ -1,17 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-    <title>music-app</title>
-  </head>
-  <body>
-    <noscript>
-      <strong>We're sorry but music-app doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
-    </noscript>
-    <div id="app"></div>
-    <!-- built files will be auto injected -->
-  </body>
+
+<head>
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=1.0">
+  <!-- <link rel="icon" href="<%= BASE_URL %>favicon.ico"> -->
+  <title>music-app</title>
+  <script type="text/javascript">
+    ; (function (unit) { function reset() { window.HTML = { el: document.documentElement, width: document.documentElement.clientWidth || window.innerWidth, height: document.documentElement.clientHeight || window.innerHeight }; window.HTML.el.style.fontSize = HTML.width * unit / 375 + "px" } reset(); document.addEventListener("DOMContentLoaded", function () { reset() }); document.addEventListener("WeixinJSBridgeReady", function () { reset() }, false); window.addEventListener("pageshow", function () { reset() }); window.addEventListener("load", function () { reset() }); window.addEventListener("resize", function () { setTimeout(function () { reset() }, 30) }) })(<%= htmlWebpackPlugin.options.remUnit %>);
+  </script>
+</head>
+
+<body>
+  <noscript>
+    <strong>We're sorry but music-app doesn't work properly without JavaScript enabled. Please enable it to
+      continue.</strong>
+  </noscript>
+  <div id="app"></div>
+  <!-- built files will be auto injected -->
+</body>
+
 </html>
